<resources>
    <string name="app_name">smart_wb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_time_set_blank_warning">시간 설정을 해주세요.</string>
    <string name="toast_screenTime_already_start_warning">스크린 타임이 이미 동작중입니다.</string>
    <string name="screen_time_success_noti_title">스크린타임 성공</string>
    <string name="screen_time_success_noti_text">축하합니다.</string>
    <string name="calendar_time_success">성공</string>
    <string name="calendar_time_fail">실패</string>
    <string name="calendar_no_data">도전한 기록이 없습니다.</string>
    <string name="calendar_btn_detail_show">상세보기</string>
    <string name="calendar_btn_detail_close">닫기</string>
    <string name="guide_dialog_title">안내</string>
    <string name="guide_dialog_mes1">* 설정한 시간동안 핸드폰을 사용할 수 없습니다.</string>
    <string name="guide_dialog_mes2">* 방해금지 모드가 활성화 됩니다.</string>
    <string name="guide_dialog_mes3">* 수신전화가 자동 거절됩니다.</string>
    <string name="guide_dialog_mes4">* 부득이한 경우 종료 버튼을 누르세요.</string>
    <string name="guide_dialog_mes5">* 성공 시간 10분 당 꽃 1송이가 제공됩니다.</string>
    <string name="guide_dialog_check">다시보지 않기</string>
    <string name="button_start">시작</string>
    <string name="button_confirm">확인</string>
    <string name="success_dialog_title_success">목표 시간 완료!</string>
    <string name="success_dialog_title_fail">종료되었습니다.</string>
    <string name="success_dialog_time">설정 시간</string>
    <string name="success_dialog_flower">획득한 꽃</string>
    <string name="success_dialog_call">부재중 전화</string>
</resources>