<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_cancel_24"
        android:layout_gravity="end" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_title"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_mes1"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_mes2"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_mes3"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_mes4"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_dialog_mes5"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:padding="4dp">

        <CheckBox
            android:id="@+id/cb_noShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_dialog_check"
            android:layout_weight="6"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bt2"
            android:layout_weight="4"
            android:layout_marginLeft="4dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>