<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="4dp"/>

    <View style="@style/Divider" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:padding="4dp">
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/success_dialog_time"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSettingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="20:00"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/success_dialog_flower"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFlower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </TableRow>
        <TableRow android:padding="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/success_dialog_call"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvMissedCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <View style="@style/Divider" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt2"
        android:text="@string/button_confirm"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>